<resources>
    <string name="app_name">Kernel Tweaker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_about">About</string>
    <string name="about_ok">OK</string>
    <string name="about_body">
<![CDATA[
        <b>Colorpickercollection Library & Demo</b><br>
        Version %s<br><br>
        <a href="https://github.com/gabrielemariotti/colorpickercollection">Source</a><br><br>
        <a href="https://plus.google.com/114432517923423045208">By Gabriele Mariotti</a><br><br>

    ]]>
    </string>
    <string name="b1text">Google+</string>
    <string name="b2text">Github</string>
    <string name="b3text">Donate</string>
    <string name="aokp_gplus">https://plus.google.com/u/0/+AOKPco/posts</string>
    <string name="aokp_github">https://github.com/AOKP</string>
    <string name="aokp_donate">http://aokp.co/donate/</string>
    <string name="du_gplus">https://plus.google.com/u/0/communities/109738128866939227235</string>
    <string name="du_github">https://github.com/DirtyUnicorns-KitKat/</string>
    <string name="du_donate">http://forum.xda-developers.com/donatetome.php?u=1289361</string>
    <string name="omni_gplus">https://plus.google.com/u/0/+OmniromOrg/posts?hl=it</string>
    <string name="omni_github">https://github.com/omnirom/</string>
    <string name="aicp_gplus">https://plus.google.com/u/0/communities/101008638920580274588?hl=it</string>
    <string name="aicp_github">https://github.com/AICP</string>
    <string name="aicp_donate">http://forum.xda-developers.com/donatetome.php?u=1184673</string>
    <string name="b2dsht">Site</string>
    <string name="dsht_gplus">https://plus.google.com/u/0/communities/101081078098156588800?hl=it</string>
    <string name="dsht_site">http://www.dshtglobal.com/</string>
    <string name="dsht_github">https://github.com/cesco89/android-kernel-tweaker</string>
    <string name="dsht_donate">http://goo.gl/idSPM3</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string-array name="menu_entries">
        <item>--Device Info</item>
        <item>Cpu Stats</item>
        <item>Cpu Info</item>
        <item>--SoC Params</item>
        <item>Cpu Parameters</item>
        <item>Gpu Parameters</item>
        <item>UV Table</item>
        <item>--Kernel Params</item>
        <item>Kernel</item>
        <item>Low Memory Killer</item>
        <item>Virtual Machine</item>
        <item>--Set on boot</item>
        <item>Review Items</item>
        <item>--Utilities</item>
        <item>File Manager</item>
        <item>Backup</item>
        <item>Recovery actions</item>
        <item>--Extra</item>
        <item>Build.prop mods</item>
        <item>Init.d tweaks</item>
        <item>--App Settings/infos</item>
        <item>Settings</item>
        <item>Informations</item>
    </string-array>
    <string-array name="menu_descs">
        <item>Frequencies time in state</item>
        <item>Informations about CPU</item>
        <item>Tweak CPU Parameters</item>
        <item>Tweak GPU Parameters</item>
        <item>Manage CPU Voltage</item>
        <item>Tweak Kernel Parameters</item>
        <item>Tweak native task killer</item>
        <item>VM Settings</item>
        <item>Review values set at boot</item>
        <item>Manage some file types</item>
        <item>Backup current kernel/recovery</item>
        <item>Execute recovery stuff</item>
        <item>App Settings</item>
        <item>Informations and credits</item>
    </string-array>
    <string-array name="menu_colors">
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
    </string-array>
    <string-array name="flash_dialog">
        <item>Flash Package</item>
    </string-array>
    <string-array name="install_image_dialog">
        <item>Install Boot.img</item>
        <item>Install Recovery.img</item>
    </string-array>
    <string name="bk_recovery">Backup Recovery.img</string>
    <string name="bk_boot">Backup Boot.img</string>
    <string name="bk_boot_desc">Make a backup of current Boot.img on external storage</string>
    <string name="bk_recovery_desc">Make a backup of current Recovery.img on external storage</string>
    <string name="bk_comp">Use Compression</string>
    <string name="bk_md5">Skip MD5 creation</string>
    <string name="list_command_empty">Commands list is empty.\n Tap the plus button to add a command</string>
    <string name="emp_title">EMPTY</string>
    <string name="emp_desc">No Values set at boot</string>
    <string name="rc_title">Root not found</string>
    <string name="rc_desc">Seems your device doesn\'t have root privileges! Please install SuperSU before use this app</string>
    <string name="bb_title">BusyBox not found</string>
    <string name="bb_desc">Your device doesn\'t have BusyBox installed, please install it through PlayStore or XDA before use this app</string>
    <string name="st_cat">Kernel Tweaker settings</string>
    <string name="gift">Just a gift ;)</string>
    <string-array name="lmk_titles">
        <item>FOREGROUND_APP</item>
        <item>VISIBLE_APP</item>
        <item>SECONDARY_SERVER</item>
        <item>HIDDEN_APP</item>
        <item>CONTENT_PROVIDER</item>
        <item>EMPTY_APP</item>
    </string-array>
    <string-array name="lmk_descs">
        <item>The application currently on the screen and running</item>
        <item>The application that is open and running in background</item>
        <item>This is a service an application needs that is alive and ready</item>
        <item>An idle process that wakes up on application request</item>
        <item>Apps that provide data (content) to the system, like Facebook sync</item>
        <item>Apps closed by the users but ready to run</item>
    </string-array>
    <string name="vdd_pref">UV VDD Table</string>
    <string name="vdd_desc">The values you have set inside UV Table page will be applied at boot.\nIf you want to edit these values go to UV Table page.</string>
    <string name="menu_del">Delete</string>
    <string name="menu_add">Add</string>
    <string name="menu_boot">Set on boot</string>
    <string name="menu_command">Add command</string>
    <string name="menu_less">-25mV</string>
    <string name="menu_plus">+25mV</string>
    <string name="uv_title">UV Table Values</string>
    <string name="cpu_max">CPU Max Frequency</string>
    <string name="cpu_min">CPU Min Frequency</string>
    <string name="cpu_governor">Governor</string>
    <string name="cpu_hotplug">Hotplug</string>
    <string name="cpu_cpuquiet_title">Cpuquiet Governor</string>
    <string name="cpu_cpuquiet_desc">This governor controls which of the CPU cores are available and when.</string>
    <string name="cpu_advanced">Advanced Options</string>
    <string name="cpu_adv_gov_title">Governor Tuning</string>
    <string name="cpu_adv_gov_desc">Fine tune governor parameters</string>
    <string name="cpu_adv_quiet_title">Cpuquiet Governor Tuning</string>
    <string name="cpu_adv_quiet_desc">Fine tune cpuquiet governor parameters</string>
    <string name="gov_title">Tweakable Governor Values</string>
    <string name="gpu_category">GPU parameters</string>
    <string name="gpu_freq_title">GPU Max Frequency</string>
    <string name="gpu_freq_desc">Set GPU maximum frequency</string>
    <string name="menu_glossary">GLOSSARY</string>
    <string-array name="glo_cpu_titles">
        <item>Max Frequency</item>
        <item>Min Frequency</item>
        <item>Governor</item>
        <item>Cores_on_touch</item>
        <item>First_level</item>
    </string-array>
    <string-array name="glo_cpu_descs">
        <item>The maximum frequency the CPU will use. You can lower it to increase battery life, or increase it for performance</item>
        <item>The minimum frequency the CPU will use. You can increase it for better performance or lower it for battery life</item>
        <item>This controls the scaling of the CPU frequencies depending on CPU load\n(Click to show governors explanations)</item>
        <item>How many cores goes online when you touch the screen</item>
        <item>The threshold that controls when a core will be woked up. Higher the value, harder for CPU core to become online</item>
    </string-array>
    <string-array name="glo_gov_titles">
        <item>Performance</item>
        <item>Powersave</item>
        <item>Userspace</item>
        <item>Ondemand</item>
        <item>Conservative</item>
        <item>Interactive</item>
        <item>Smartass</item>
    </string-array>
    <string-array name="glo_gov_descs">
        <item>The CPUfreq governor performance sets the CPU statically to the
highest frequency within the borders of scaling_min_freq and
scaling_max_freq.</item>
        <item>The CPUfreq governor powersave sets the CPU statically to the
lowest frequency within the borders of scaling_min_freq and
scaling_max_freq.</item>
        <item>The CPUfreq governor userspace allows the user, or any userspace
program running with UID root, to set the CPU to a specific frequency
by making a sysfs file scaling_setspeed available in the CPU-device
directory.</item>
        <item>The CPUfreq governor ondemand sets the CPU depending on the
current usage. To do this the CPU must have the capability to
switch the frequency very quickly.</item>
        <item>The CPUfreq governor conservative, much like the ondemand
governor, sets the CPU depending on the current usage.  It differs in
behaviour in that it gracefully increases and decreases the CPU speed
rather than jumping to max speed the moment there is any load on the
CPU.  This behaviour more suitable in a battery powered environment.</item>
        <item>The CPUfreq governor interactive is designed for latency-sensitive,
interactive workloads. This governor sets the CPU speed depending on
usage, similar to ondemand and conservative governors.  However,
the governor is more aggressive about scaling the CPU speed up in
response to CPU-intensive activity.

Sampling the CPU load every X ms can lead to under-powering the CPU
for X ms, leading to dropped frames, stuttering UI, etc.  Instead of
sampling the cpu at a specified rate, the interactive governor will
check whether to scale the cpu frequency up soon after coming out of
idle.  When the cpu comes out of idle, a timer is configured to fire
within 1-2 ticks.  If the cpu is very busy between exiting idle and
when the timer fires then we assume the cpu is underpowered and ramp
to MAX speed.

If the cpu was not sufficiently busy to immediately ramp to MAX speed,
then governor evaluates the cpu load since the last speed adjustment,
choosing the highest value between that longer-term load or the
short-term load since idle exit to determine the cpu speed to ramp to.</item>
        <item>Result of Erasmux rewriting the complete code of interactive governor.
             Main goal is to optimize battery life without comprising performance. 
             Still, not as battery friendly as smartassV2 since screen-on minimum frequency is greater than frequencies used during screen-off. Smartass would jump up to highest frequency too often as well.</item>
    </string-array>
</resources>